--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Whether app</title>
-    <link rel="stylesheet" href="/style.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
@@ -51,7 +51,7 @@
     </div>
     <div class="future-forecast">
         <div class="today" id="current-temp">
-            <img src="/images/clouds.png" alt="whether icon" class="w-icon">
+            <img src="images/clouds.png" alt="whether icon" class="w-icon">
             <div class="others">
                 <div class="day">Monday</div>
                 <div class="temp">Night - 25.6&#176; C</div>
@@ -62,37 +62,37 @@
         <div class="whether-forecast" id="whether-forecast">
             <div class="whether-forecast-item">
                 <div class="day">Tue</div>
-                <img src="/images/clouds.png" alt="whether icon" class="w-icon">
+                <img src="images/clouds.png" alt="whether icon" class="w-icon">
                 <div class="tueTemp">Night - 25.6&#176; C</div>
                 <div class="tueDate">Day - 35.6&#176; C</div>
             </div>
             <div class="whether-forecast-item">
                 <div class="day">Wed</div>
-                <img src="/images/clouds.png" alt="whether icon" class="w-icon">
+                <img src="images/clouds.png" alt="whether icon" class="w-icon">
                 <div class="wedTemp">Night - 25.6&#176; C</div>
                 <div class="wedDate">Day - 35.6&#176; C</div>
             </div>
             <div class="whether-forecast-item">
                 <div class="day">Thur</div>
-                <img src="/images/clouds.png" alt="whether icon" class="w-icon">
+                <img src="images/clouds.png" alt="whether icon" class="w-icon">
                 <div class="thurTemp">Night - 25.6&#176; C</div>
                 <div class="thurDate">Day - 35.6&#176; C</div>
             </div>
             <div class="whether-forecast-item">
                 <div class="day">Fri</div>
-                <img src="/images/clouds.png" alt="whether icon" class="w-icon">
+                <img src="images/clouds.png" alt="whether icon" class="w-icon">
                 <div class="friTemp">Night - 25.6&#176; C</div>
                 <div class="friDate">Day - 35.6&#176; C</div>
             </div>
             <div class="whether-forecast-item">
                 <div class="day">Sat</div>
-                <img src="/images/clouds.png" alt="whether icon" class="w-icon">
+                <img src="images/clouds.png" alt="whether icon" class="w-icon">
                 <div class="satTemp">Night - 25.6&#176; C</div>
                 <div class="satDate">Day - 35.6&#176; C</div>
             </div>
         </div>
     </div>
-    <Script src="/assets/app.js"></Script>
+    <Script src="assets/app.js"></Script>
 </body>
 
 </html>
